# libmewo

./: CMakeLists.txt  README.md
include/: frames.h  mewo.h  transforms.h
scripts/: bitmap_to_c.py
src/: frames.c  mewo.c  transforms.c
test/: anim_validation.c  frame_validation.c
